[gd_scene load_steps=10 format=3 uid="uid://bwil4i34acj3q"]

[ext_resource type="Script" path="res://1_Scripts/player.gd" id="1_xdi00"]
[ext_resource type="Texture2D" uid="uid://c7e4nweqgy74p" path="res://2_Images/Actors/MainChar.png" id="2_mni6y"]
[ext_resource type="Texture2D" uid="uid://dgyhprwqo3ysf" path="res://2_Images/Actors/HandLantern.png" id="3_ghcyr"]
[ext_resource type="AudioStream" uid="uid://w5wv4vbbhrrf" path="res://98_Placeholders/Audio/bell-sound-193696.mp3" id="3_pp5ny"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_afc57"]
radius = 29.0
height = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rs2sw"]
radius = 23.0868

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_5138w"]
polygon = PackedVector2Array(-7.21352, -40.6187, -8.65622, -55.1254, -8.65622, -66.7307, -1.4427, -104.448, 0.721352, -104.448, 6.49217, -72.5334, 6.49217, -49.3227, 5.04946, -43.52, 10.8203, -34.816, 16.5911, 0, 15.8697, 43.52, 12.263, 63.8294, 8.65622, 52.224, 8.65622, 66.7307, 2.88541, 81.2374, -6.49217, 81.2374, -9.37757, 63.8294, -12.263, 58.0267, -12.9843, 49.3227, -15.1484, 26.112, -17.3124, 5.80267, -12.9843, -26.112)

[sub_resource type="CircleShape2D" id="CircleShape2D_65jk1"]
radius = 74.0

[sub_resource type="CircleShape2D" id="CircleShape2D_52kga"]
radius = 365.034

[node name="Player" type="CharacterBody2D"]
collision_mask = 22
script = ExtResource("1_xdi00")

[node name="MainChar" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_mni6y")

[node name="HandLantern" type="Sprite2D" parent="MainChar"]
position = Vector2(-1, 2)
texture = ExtResource("3_ghcyr")

[node name="CharCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_afc57")
debug_color = Color(0, 0.595, 0.7, 0.0117647)

[node name="HealthCollision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthCollision"]
shape = SubResource("CircleShape2D_rs2sw")
debug_color = Color(0.97, 0, 0.485, 0.188235)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
scale = Vector2(1.38629, 0.344669)
occluder = SubResource("OccluderPolygon2D_5138w")
occluder_light_mask = 2

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_65jk1")
debug_color = Color(0.309804, 0.603922, 0.482353, 0.121569)

[node name="GhostFinder" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pp5ny")
volume_db = -10.0
pitch_scale = 0.9
autoplay = true
parameters/looping = true

[node name="GhostFindingArea" type="Area2D" parent="."]
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostFindingArea"]
shape = SubResource("CircleShape2D_52kga")
debug_color = Color(1, 1, 1, 0)

[connection signal="area_entered" from="HealthCollision" to="." method="_on_health_collision_area_entered"]
[connection signal="area_exited" from="HealthCollision" to="." method="_on_health_collision_area_exited"]
[connection signal="area_entered" from="GhostFindingArea" to="." method="_on_ghost_finding_area_area_entered"]
[connection signal="area_exited" from="GhostFindingArea" to="." method="_on_ghost_finding_area_area_exited"]
